# Vellum

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  design-qa.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/.skills/: .curator_state.json
backend/agent/: __init__.py  api.py  cli.py  computer_use_runtime.py  computer_use_workspace.py  config.py
backend/agent/agents/: __init__.py  base.py  context.py  live_dispatcher.py  memory_agent.py  orchestrator.py  router.py  skill_router.py  sports.py  x_agent.py  youtube.py
backend/agent/cli/: __init__.py  project_commands.py
backend/agent/coding/: __init__.py  checkpoints.py  events.py  models.py  service.py  storage.py  workspace.py
backend/agent/computer_use/: __init__.py  driver.py  input_guard.py  operator.py  overlay.py  router.py  routing_policy.py  session.py  windows_driver.py
backend/agent/contracts/: __init__.py  capabilities.py  conversations.py
backend/agent/conversations/: __init__.py  library.py
backend/agent/daemon/: __init__.py  main.py
backend/agent/graph/: __init__.py  agent.py
backend/agent/knowledge/: __init__.py  adapters.py  api.py  backup.py  ingestion.py  models.py  runtime.py  service.py  store.py  tool_observer.py
backend/agent/llm/: openrouter.py  providers.py
backend/agent/master/: __init__.py  delegation.py  hybrid.py  registry.py  runtime.py  state.py
backend/agent/mcp/: __init__.py  apify_tools.py  client.py  context7_tools.py  context_mode_tools.py  filesystem_tools.py  firecrawl_tools.py  github_tools.py  gitmcp_tools.py  (+3 more)
backend/evals/: conversation_library_cases.json
backend/scripts/: conversation_library_autoresearch.py  migrate_skills.py  migrate_vault_v2.py  skills_ops.py
backend/tests/: conftest.py  test_access_control.py  test_agent_cancellation.py  test_agent_execution_context.py  test_agent_identity.py  test_agent_orchestration.py  test_agent_profile_skills.py  test_agent_profiles.py  test_agent_profiles_v2.py  test_agent_prompt.py  test_agent_reach_plugin.py  test_agent_reach_x_provider.py  test_agent_runtime_api.py  test_agent_supervisor.py  test_aphorism_filter.py  test_api.py  test_api_mcp_health.py  test_api_models.py  test_api_project_command.py  test_apify_tweet_client.py  test_background_learn_tick.py  test_capability_contract_memory_wiki.py  test_chat_stream_sources.py  test_cli.py  test_cli_app.py  test_cli_atomic_env.py  test_cli_config.py  test_cli_doctor.py  test_cli_models.py  test_cli_sessions.py  test_cli_setup.py  test_cli_usage.py  test_cloud_escalation.py  test_coding_adapters.py  test_coding_api.py  test_coding_project_tree.py  test_coding_service.py  test_coding_storage.py  test_coding_workspace.py  test_coding_workspace_html.py  (+152 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
(+485 files in other folders)
