[package]
name = "vellum-desktop"
version = "0.1.0"
description = "Vellum desktop shell"
authors = ["Vellum"]
edition = "2021"

[lib]
name = "vellum_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
ureq = { version = "2", features = ["json"] }
